fixup! build(docs): setup starlight

--- a/docs/src/content/docs/en/index.mdx
+++ b/docs/src/content/docs/en/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../../assets/icon.svg
   actions:
     - text: Read the Guide
-      link: ./tutorial/translation
+      link: ./guides/compiling/cmake
       icon: right-arrow
       variant: primary
     - text: Join the official Discord
